--- a/sandbox/ajax_upload/config/settings.yml
+++ b/sandbox/ajax_upload/config/settings.yml
@@ -47,6 +47,10 @@ session_timeout:
 attachment_max_size:
   format: int
   default: 5120
+# Ajax concurrent uploads allowed, -1 to deactivate queueing
+attachment_max_concurrent_ajax_uploads:
+  format: int
+  default: 3
 issues_export_limit:
   format: int
   default: 500
