Moved max_concurrent_ajax_uploads from settings to configuration.
git-svn-id: http://svn.redmine.org/redmine@10974 e93f8b46-1217-0410-a6f0-8f06a7374b81

--- a/sandbox/ajax_upload/config/configuration.yml.example
+++ b/sandbox/ajax_upload/config/configuration.yml.example
@@ -166,6 +166,9 @@ default:
   # the ImageMagick's `convert` binary. Used to generate attachment thumbnails.
   #imagemagick_convert_command:
 
+  # Maximum number of simultaneous AJAX uploads
+  #max_concurrent_ajax_uploads: 2
+
 # specific configuration options for production environment
 # that overrides the default ones
 production:
