--- a/sandbox/rails-4.1/lib/plugins/awesome_nested_set/.travis.yml
+++ b/sandbox/rails-4.1/lib/plugins/awesome_nested_set/.travis.yml
@@ -8,11 +8,8 @@ env:
 rvm:
   - 2.0.0
   - 1.9.3
-  - rbx
+  - rbx-2
   - jruby-19mode
-  - 1.8.7
-  - jruby-18mode
 gemfile:
-  - gemfiles/Gemfile.rails-3.0.rb
-  - gemfiles/Gemfile.rails-3.1.rb
-  - gemfiles/Gemfile.rails-3.2.rb
+  - gemfiles/rails_4.0.gemfile
+  - gemfiles/rails_4.1.gemfile
