--- a/sandbox/rails-4.1/lib/plugins/awesome_nested_set/Gemfile
+++ b/sandbox/rails-4.1/lib/plugins/awesome_nested_set/Gemfile
@@ -2,13 +2,13 @@ gem 'combustion', :github => 'pat/combustion', :branch => 'master'
 
 source 'https://rubygems.org'
 
-gemspec :path => File.expand_path('../', __FILE__)
+gemspec
 
 platforms :jruby do
-  gem 'activerecord-jdbcsqlite3-adapter'
-  gem 'activerecord-jdbcmysql-adapter'
+  gem 'activerecord-jdbcsqlite3-adapter', '>= 1.3.0.beta2'
+  gem 'activerecord-jdbcmysql-adapter', '>= 1.3.0.beta2'
   gem 'jdbc-mysql'
-  gem 'activerecord-jdbcpostgresql-adapter'
+  gem 'activerecord-jdbcpostgresql-adapter', '>= 1.3.0.beta2'
   gem 'jruby-openssl'
 end
 
@@ -18,17 +18,6 @@ platforms :ruby do
   gem 'pg'
 end
 
-RAILS_VERSION = nil unless defined? RAILS_VERSION
-gem 'railties', RAILS_VERSION
-gem 'activerecord', RAILS_VERSION
-gem 'actionpack', RAILS_VERSION
-
-platforms :rbx do
-  gem 'rubysl', '~> 2.0'
-  gem 'rubysl-test-unit'
-end
-
-
 # Add Oracle Adapters
 # gem 'ruby-oci8'
 # gem 'activerecord-oracle_enhanced-adapter'
@@ -36,3 +25,6 @@ end
 # Debuggers
 gem 'pry'
 gem 'pry-nav'
+
+gem "appraisal"
+
