Gemfile: remove version from mocha
git-svn-id: http://svn.redmine.org/redmine@13246 e93f8b46-1217-0410-a6f0-8f06a7374b81

--- a/sandbox/rails-4.1/Gemfile
+++ b/sandbox/rails-4.1/Gemfile
@@ -92,7 +92,7 @@ group :test do
   gem "minitest"
   gem "shoulda"
   gem "shoulda-context"
-  gem "mocha", "~> 1.0.0", :require => 'mocha/api'
+  gem "mocha", :require => 'mocha/api'
   if RUBY_VERSION >= '1.9.3'
     gem "capybara", "~> 2.1.0"
     gem "selenium-webdriver"
