--- a/sandbox/rails-4.1/Gemfile
+++ b/sandbox/rails-4.1/Gemfile
@@ -90,10 +90,9 @@ group :test do
   gem "shoulda"
   gem "shoulda-context"
   gem "mocha", :require => 'mocha/api'
-  if RUBY_VERSION >= '1.9.3'
-    gem "capybara", "~> 2.1.0"
-    gem "selenium-webdriver"
-  end
+  # For running UI tests
+  gem "capybara", "~> 2.1.0"
+  gem "selenium-webdriver"
 end
 
 local_gemfile = File.join(File.dirname(__FILE__), "Gemfile.local")
