tzinfo-data gem required with Windows/JRuby.
git-svn-id: http://svn.redmine.org/redmine@13268 e93f8b46-1217-0410-a6f0-8f06a7374b81

--- a/sandbox/rails-4.1/Gemfile
+++ b/sandbox/rails-4.1/Gemfile
@@ -11,7 +11,7 @@ gem "protected_attributes"
 gem "actionpack-action_caching"
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
-gem 'tzinfo-data', platforms: [:mingw, :mswin]
+gem 'tzinfo-data', platforms: [:mingw, :mswin, :jruby]
 
 # Optional gem for LDAP authentication
 group :ldap do
