Use eval_gemfile.
git-svn-id: http://svn.redmine.org/redmine@13273 e93f8b46-1217-0410-a6f0-8f06a7374b81

--- a/sandbox/rails-4.1/Gemfile
+++ b/sandbox/rails-4.1/Gemfile
@@ -96,13 +96,10 @@ end
 
 local_gemfile = File.join(File.dirname(__FILE__), "Gemfile.local")
 if File.exists?(local_gemfile)
-  puts "Loading Gemfile.local ..." if $DEBUG # `ruby -d` or `bundle -v`
-  instance_eval File.read(local_gemfile)
+  eval_gemfile local_gemfile
 end
 
 # Load plugins' Gemfiles
 Dir.glob File.expand_path("../plugins/*/Gemfile", __FILE__) do |file|
-  puts "Loading #{file} ..." if $DEBUG # `ruby -d` or `bundle -v`
-  #TODO: switch to "eval_gemfile file" when bundler >= 1.2.0 will be required (rails 4)
-  instance_eval File.read(file), file
+  eval_gemfile file
 end
